# website

./: .gitignore  Cargo.toml  TODO.md  deploy  otq.service  schema  server.go
frontend/: index.html
frontend/styles/: error.css  general.css  index.css
src/: main.rs
templates/: 500.stpl  response.stpl
