[package]
name = "otq-no"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = "0.3.0"
rusqlite = "0.27.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }
sailfish = "0.4.0"
